--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daniel Cheng</title>
+  <title>Daniel Cheng </title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
@@ -12,6 +12,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Daniel</h1>
+    <h2>Welcome to my site</h2>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
