--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Daniel</h1>
     <h2>Welcome!</h2>
+    <h3>Adding a line</h3>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
