--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Daniel</h1>
-    <h2>Welcome!</h2>
+    <h2 style="color:blue;">Welcome!</h2>
     <h3>Adding a line</h3>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
